Improved the light Rendering
Made the lights work without refreshing all of them every frame.
made the spotLight work properly.
you still cannot preset values in the level file.

--- a/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj.filters
+++ b/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj.filters
@@ -279,5 +279,8 @@
     <Image Include="Resources\Icons\directional_icon.jpg">
       <Filter>Resource Files</Filter>
     </Image>
+    <Image Include="Resources\Icons\CameraIcon.jpg">
+      <Filter>Resource Files</Filter>
+    </Image>
   </ItemGroup>
 </Project>
