--- a/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
+++ b/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
@@ -238,6 +238,7 @@
     <Text Include="Resources\Levels\Level.txt" />
   </ItemGroup>
   <ItemGroup>
+    <Image Include="Resources\Icons\CameraIcon.jpg" />
     <Image Include="Resources\Icons\directional_icon.jpg" />
     <Image Include="Resources\Icons\pointLightIcon.jpg" />
     <Image Include="Resources\Icons\spot_icon.jpg" />
