made a level save system and more
You can save the level after making changes.
static variables have been added at the top of the level script.
Individual ambience for lights is no longer a thing.

--- a/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj.filters
+++ b/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj.filters
@@ -237,7 +237,7 @@
       <Filter>Source Files\Editor</Filter>
     </ClCompile>
     <ClCompile Include="EditorDebug.cpp">
-      <Filter>Source Files</Filter>
+      <Filter>Source Files\Editor</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
