Removed all resources from git

--- a/.gitignore
+++ b/.gitignore
@@ -332,3 +332,5 @@ ASALocalRun/
 OpenGLGameEngine/OpenGLGameEngine/imgui\.ini
 
 Game Engine Programmer Assistant/
+
+OpenGLGameEngine/OpenGLGameEngine/Resources/
