--- a/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj.filters
+++ b/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj.filters
@@ -49,12 +49,6 @@
     <Filter Include="Game">
       <UniqueIdentifier>{9911f5cb-ffe3-42b9-8d9a-164ed4b95fa5}</UniqueIdentifier>
     </Filter>
-    <Filter Include="Game\Header">
-      <UniqueIdentifier>{386b6501-70f0-4e9d-8b0f-a7093216b6ed}</UniqueIdentifier>
-    </Filter>
-    <Filter Include="Game\Source">
-      <UniqueIdentifier>{b15dc9ea-ee0d-4574-9758-d8d6be262128}</UniqueIdentifier>
-    </Filter>
     <Filter Include="Game\Components">
       <UniqueIdentifier>{21a84fde-a4d4-4282-b5d1-a822ac964cf7}</UniqueIdentifier>
     </Filter>
@@ -156,17 +150,26 @@
     <ClInclude Include="EditorDebug.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Proj\Include.h">
+    <ClInclude Include="..\..\..\Proj\LocalEditorMode.h">
       <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Proj\LocalLevelFileManager.h">
-      <Filter>Game\Header</Filter>
+    <ClInclude Include="..\..\..\Proj\LocalLevelFileManager.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Proj\LocalEditorMode.h">
-      <Filter>Game\Header</Filter>
+    <ClInclude Include="..\..\..\Proj\move.h">
+      <Filter>Header Files</Filter>
     </ClInclude>
-    <ClInclude Include="Proj\move.h">
-      <Filter>Game\Header</Filter>
+    <ClInclude Include="..\..\Proj\Include.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Proj\LocalEditorMode.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Proj\LocalLevelFileManager.h">
+      <Filter>Game</Filter>
+    </ClInclude>
+    <ClInclude Include="..\..\Proj\move.h">
+      <Filter>Game</Filter>
     </ClInclude>
   </ItemGroup>
   <ItemGroup>
@@ -263,14 +266,14 @@
     <ClCompile Include="main.cpp">
       <Filter>Source Files</Filter>
     </ClCompile>
-    <ClCompile Include="Proj\LocalLevelFileManager.cpp">
-      <Filter>Game\Source</Filter>
+    <ClCompile Include="..\..\Proj\LocalEditorMode.cpp">
+      <Filter>Game</Filter>
     </ClCompile>
-    <ClCompile Include="Proj\LocalEditorMode.cpp">
-      <Filter>Game\Source</Filter>
+    <ClCompile Include="..\..\Proj\LocalLevelFileManager.cpp">
+      <Filter>Game</Filter>
     </ClCompile>
-    <ClCompile Include="Proj\move.cpp">
-      <Filter>Game\Components</Filter>
+    <ClCompile Include="..\..\Proj\move.cpp">
+      <Filter>Game</Filter>
     </ClCompile>
   </ItemGroup>
   <ItemGroup>
