Moved the shaders so that they are not ignored by git
to fix my mistake at commit a62f6c586c36c4549e6d20b91a3e924485e9aec4

--- a/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
+++ b/OpenGLGameEngine/OpenGLGameEngine/OpenGLGameEngine.vcxproj
@@ -240,10 +240,10 @@
     <None Include="Resources\Models\FlipTest.ply" />
     <None Include="Resources\Models\house.ply" />
     <None Include="Resources\Models\TreeTest.ply" />
-    <None Include="Resources\Shaders\core.frag" />
-    <None Include="Resources\Shaders\core.vert" />
-    <None Include="Resources\Shaders\icon.frag" />
-    <None Include="Resources\Shaders\icon.vert" />
+    <None Include="Shaders\core.frag" />
+    <None Include="Shaders\core.vert" />
+    <None Include="Shaders\icon.frag" />
+    <None Include="Shaders\icon.vert" />
   </ItemGroup>
   <ItemGroup>
     <Text Include="Resources\Levels\Level.txt" />
