--- a/.gitignore
+++ b/.gitignore
@@ -334,3 +334,5 @@ OpenGLGameEngine/OpenGLGameEngine/imgui\.ini
 Game Engine Programmer Assistant/
 
 OpenGLGameEngine/OpenGLGameEngine/Resources/
+
+Proj/
